# libgit2-backends

sqlite/: CMakeLists.txt  lg2sql.hpp  odb.c  odb.cpp  refdb.c  refdb.cpp  sqlite.c  sqlite.hpp
